apps/koukou/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koukou
  namespace: nori-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koukou
  template:
    metadata:
      labels:
        app: koukou
    spec:
      containers:
        - image: ghcr.io/nori-cloud/koukou:c6d1ef2
          name: koukou
          ports:
            - containerPort: 3000
