apps/koukou/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koukou
  namespace: nori-cloud
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: koukou
