apps/koukou/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: koukou
  namespace: nori-cloud
  labels:
    app: koukou
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`koukou.norriswu.me`)
      kind: Rule
      services:
        - name: koukou
          port: 3000
